test/parse/relaxed/bad/nospaceafterstatus.sol
s SATISFIABLE  no white space
v 1 2 0
